# agent-harness-chorus-csd-analyzer

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: audit.yml
docs/superpowers/plans/: 2026-05-20-plan-4-rebuild-form-import.md
docs/superpowers/retros/: 2026-05-20-plan-4-rebuild-retro.md
docs/superpowers/specs/: 2026-05-18-agent-app-chorus-csd-analyzer-design.md  2026-05-20-plan-4-rebuild-form-import-design.md
src/chorus_csd_analyzer/: __init__.py  agent.py  ai_client.py  app.py  converter.py  enricher.py
src/chorus_csd_analyzer/knowledge/: awd_reference.md
src/chorus_csd_analyzer/prompts/: system_prompt.md
templates/: index.html
tests/: __init__.py  conftest.py  test_agent.py  test_ai_client.py  test_app.py  test_converter.py  test_enricher.py
