[project]
name = "agent-harness-chorus-csd-analyzer"
version = "0.1.0"
description = "FastAPI + LangGraph ReAct harness for AWD CSD form analysis and Chorus Classic XML conversion. 12-component agent harness."
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Chris Moore" }]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    "jinja2>=3.1",
    "httpx>=0.27",
    "langchain-core>=0.3",
    "langchain-openai>=0.3",
    "langgraph>=0.3",
    "lxml>=5.0",
    "python-dotenv>=1.0",
    "agent-tool-chorus-v1-client",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]

[tool.uv.sources]
agent-tool-chorus-v1-client = { git = "https://github.com/PatientVibes/agent-tool-chorus-v1-client.git", rev = "6aa78010c5a984642b8709b1ba4ec41596e4c6f4" }

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["chorus_csd_analyzer*"]

[tool.setuptools.package-data]
chorus_csd_analyzer = ["prompts/*.md", "knowledge/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests requiring external files or network",
]
